// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseExpression parses courses with a single department 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "number": 121,
}
`;

exports[`CourseExpression parses courses with a two departments 1`] = `
Object {
  "$type": "course",
  "department": "AS/ES",
  "number": 121,
}
`;

exports[`CourseExpression parses courses with no departments as having no department 1`] = `
Object {
  "$type": "course",
  "number": 121,
}
`;

exports[`CourseExpression parses courses with sections 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "number": 121,
  "section": "A",
}
`;

exports[`CourseExpression parses courses with semesters 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "number": 121,
  "section": "A",
  "semester": 1,
  "year": 2014,
}
`;

exports[`CourseExpression parses courses with years 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "number": 121,
  "section": "A",
  "year": 2014,
}
`;

exports[`CourseExpression supports international courses 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "international": true,
  "number": 121,
}
`;

exports[`CourseExpression supports international labs 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "international": true,
  "number": 121,
  "type": "Lab",
}
`;

exports[`CourseExpression supports labs 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "number": 121,
  "type": "Lab",
}
`;

exports[`CourseExpression supports wildcard sections 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "number": 121,
  "section": "*",
}
`;

exports[`CourseExpression supports wildcard semesters 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "number": 121,
  "section": "*",
  "semester": "*",
  "year": "*",
}
`;

exports[`CourseExpression supports wildcard years 1`] = `
Object {
  "$type": "course",
  "department": "CSCI",
  "number": 121,
  "section": "*",
  "year": "*",
}
`;
